--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/JoeHancock1995/nibbler/issues"
   },
-  "homepage": "https://github.com/JoeHancock1995/nibbler#readme"
+  "homepage": "https://github.com/JoeHancock1995/nibbler#readme",
+  "dependencies": {
+    "inquirer": "^7.3.0"
+  }
 }
